
                   Zii Extension Library for Yii Change Log
                   ========================================

Version 1.1.3 to be released
----------------------------
- New: Added CJuiButton (sebas)

Version 1.1.2 May 2, 2010
-------------------------
- Bug #1031: Added a temporary fix for dropdown filter in CGridView not working in IE (Qiang)
- Enh #1013: Added CJuiAutoComplete (sebas)
- New: Upgraded JQuery UI to 1.8.1 (Qiang)


Version 1.1.1 March 14, 2010
----------------------------
- Bug: CGridView and CListView may not register the needed CSS file for the pager (Qiang)
- Bug #18: Change the way CJuiDatePicker sets its language option (sebas)
- Bug #14: Added documentation about the "js:" prefix in CJuiSortable (sebas)
- Bug #27: Fixed the issue that when CSRF is turned on, delete button doesn't work for CGridView (Qiang)
- Enh: Added CListView.loadingCssClass and CGridView.loadingCssClass (Qiang)
- Enh: Added filtering support for CGridView (Qiang)
- Enh: Added 'template' option to each attribute specification in CDetailView (Qiang)
- Chg: CMenu will render the 'active' CSS class in the container tag of the link (Qiang)
- Chg: Set the default theme for JQuery UI widgets to be 'base' (Qiang)
- New: Upgraded JQuery UI to 1.8rc3 (Qiang)

Version 1.1.0 January 10, 2010
------------------------------
- New: Added CTimestampBehavior to automatically set timestamps in AR (Jonah)
- New: Added CBaseMenu and CListMenu to aid in creating menus (Jonah)
- New: Added CJuiWidget (sebas, Qiang)
- New: Added CJuiInputWidget (sebas, Qiang)
- New: Added CJuiSlider (sebas, Qiang)
- New: Added CJuiSliderInput (sebas)
- New: Added CJuiAccordion (sebas, Qiang)
- New: Added CJuiProgressBar (sebas, Qiang)
- New: Added CJuiTabs (sebas, Qiang)
- New: Added CJuiDatePicker (sebas, Qiang)
- New: Added CJuiSortable (sebas)
- New: Added CJuiDialog (sebas)
- New: Added CJuiSelectable (sebas)
- New: Added CJuiDroppable (sebas)
- New: Added CJuiResizable (sebas)